<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">wikiWeeb</string>
    <string name="User">User Name/e mail address</string>
    <string name="Password">Password</string>
    <string name="RememberMe">Remember me</string>
    <string name="SignUp">Sign Up</string>
    <string name="SignIn">Sign In</string>
    <string name="Google">Google</string>
    <string name="Facebook">Login in with Facebook</string>
    <string name="etUser">User</string>
    <string name="Twiter">Twiter</string>
    <string name="tvOtherSign">Or singnup with</string>
    <string name="Inbentory">Inventario</string>
    <string name="Dependecias">Dependencias</string>
    <string name="sectores">Sectores</string>
    <string name="productos">Productos</string>
    <string name="perfil">Perfil</string>
    <string name="ajustes">Ajustes</string>
    <string name="tiedUser">User</string>
    <string name="tiedPassword1">Password</string>
    <string name="tiedPassword2">Repeat Password</string>
    <string name="tiedEmail">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="f_dependeci_manage_tvShortName">Short Name</string>
    <string name="f_dependeci_manage_tvName">Name</string>
    <string name="f_dependeci_manage_tvInventoy">Inventoy</string>
    <string name="f_dependeci_manage_tvDescripcion">descripcion</string>

    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="loading">loading</string>
    <string name="f_review_view_tvTitulo">Tilte</string>
    <string name="f_review_view_tvOpinion">opinion</string>
    <string name="f_review_view_tvPuntuacion">puntuacion</string>
    <string name="f_review_view_tvUsuario">User</string>
    <string name="f_review_add_tvArticulo">Item</string>
    <string name="f_review_add_tvPuntuacion">generic score</string>
    <string name="f_review_add_tvOpiniont">opinion</string>
    <string name="forgottenPassword">forgotten password</string>
    <!-- entrega aqui -->
</resources>
