<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llLoginPadding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/llLigonPadding">

        <TextView
            android:id="@+id/User"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tvLoginMarginTop"
            android:text="@string/User" />

        <EditText
            android:id="@+id/etUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tvLoginMarginTop"
            android:text="@string/Password" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chRememcte"
                style="@style/chechBoxLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/RememberMe" />

            <Button
                android:id="@+id/btSignUp"
                style="@style/Widget.Button.Transparent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/SignUp" />
        </LinearLayout>

        <Button
            android:id="@+id/btForgottenPassword"
            style="@style/Widget.Button.Transparent"
            android:layout_width="@dimen/btSignInLoginWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forgottenPassword" />

        <Button
            android:id="@+id/btSignIn"
            android:layout_width="@dimen/btSignInLoginWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/round_corner"
            android:text="@string/SignIn"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tvOtherSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tvOtherSign" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/tbGoogle"
                android:layout_width="@dimen/imgBtLoginWidth"
                android:layout_height="@dimen/imgBtLoginHeight"
                android:layout_margin="@dimen/imdtbLoginMargin"
                android:background="@drawable/ic_google"
                android:text="@string/Google" />

            <ImageButton
                android:id="@+id/btFacebook"
                android:layout_width="@dimen/imgBtLoginWidth"
                android:layout_height="@dimen/imgBtLoginHeight"
                android:layout_margin="@dimen/imdtbLoginMargin"
                android:background="@drawable/ic_facebook"
                android:text="@string/Facebook" />

            <ImageButton
                android:id="@+id/btTwiter"
                android:layout_width="@dimen/imgBtLoginWidth"
                android:layout_height="@dimen/imgBtLoginHeight"
                android:layout_margin="@dimen/imdtbLoginMargin"
                android:background="@drawable/ic_twitter"
                android:text="@string/Twiter" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>

